Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td align="center">9</td>
 <td align="center">14 Nov</td>
 <td>
-<strong>L7: Single-cycle MIPS implementation</strong><br>• <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_7__14_Nov__Single_Cycle_Implementation__Eng_text__Rus_audio.pptx?raw=true">Eng text, Rus audio, 54 MB</a><br>• <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_7__14_Nov__Single_Cycle_Implementation__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 0.4 MB</a>
+<strong>L7: Single-Cycle MIPS Implementation</strong><br>• <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_7__14_Nov__Single_Cycle_Implementation__Eng_text__Rus_audio.pptx?raw=true">Eng text, Rus audio, 54 MB</a><br>• <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_7__14_Nov__Single_Cycle_Implementation__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 0.4 MB</a>
 </td>
 <td></td>
 </tr>
@@ -145,6 +145,22 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td align="center">05 Dec</td>
 <td>
 <strong>L10: Advanced Pipelining and Superscalar CPUs</strong><br>
+</td>
+<td></td>
+</tr>
+<tr>
+<td align="center">13</td>
+<td align="center">12 Dec</td>
+<td>
+<strong>L11: Pipeline Staging</strong><br>
+</td>
+<td></td>
+</tr>
+<tr>
+<td align="center">14</td>
+<td align="center">19 Dec</td>
+<td>
+<strong>Test 2</strong><br>
 </td>
 <td></td>
 </tr>
