Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <tr>
 <td align="center">11</td>
 <td align="center">28 Nov</td>
-<td><strong>L9: Branch Prediction</strong></td>
+<td>
+<strong>L9: Branch Prediction</strong><br>• <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_9__28_Nov_Branch_Prediction__Eng_text__Rus_audio?raw=true">Eng text, Rus audio, 77 MB</a><br>• <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_9__28_Nov_Branch_Prediction__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 0.7 MB</a>
+</td>
 <td>Deadline for the 2nd assignment.<br>Publishment of the 3rd assignment</td>
 </tr>
 <tr>
