Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td>
 <strong>L9: Branch Prediction</strong><br>• <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_09__28_Nov__Branch_Prediction__Eng_text__Rus_audio?raw=true">Eng text, Rus audio, 77 MB</a><br>• <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_09__28_Nov__Branch_Prediction__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 0.7 MB</a>
 </td>
-<td>Deadline for the 2nd assignment.<br>Publishment of the 3rd assignment</td>
+<td>Deadline for the 2nd assignment.</td>
 </tr>
 <tr>
 <td align="center">12</td>
@@ -148,7 +148,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td>
 <strong>L10: Advanced Pipelining and Superscalar CPUs</strong><br>
 </td>
-<td></td>
+<td>Publishment of the 3rd assignment</td>
 </tr>
 <tr>
 <td align="center">13</td>
@@ -165,6 +165,12 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <strong>Test 2</strong><br>
 </td>
 <td></td>
+</tr>
+<tr>
+<td align="center">15<br>20</td>
+<td align="center">26 Dec<br>30 Jan</td>
+<td><strong>Christmas holidays</strong></td>
+<td>08 Jan is the deadline for the 3rd assignment</td>
 </tr>
 </tbody>
 </table>
