--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td></td>
 </tr>
 <tr>
-<td align="center">15c<br>—<br>20</td>
-<td align="center">26 Dec<br>—<br>30 Jan</td>
+<td align="center">15<br>—<br>20</td>
+<td align="center"></td>
 <td><strong>Christmas holidays</strong></td>
 <td>08 Jan is the deadline for the 3rd assignment</td>
 </tr>
