--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td align="center">14</td>
 <td align="center">19 Dec</td>
 <td>
-<strong>Test 2</strong><br>
-</td>
+<strong>Test 2</strong><br>• Review L6−L11 material<br>• Review 3rd — 6th chapters of Schildt C++ manual</td>
 <td></td>
 </tr>
 <tr>
