Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td align="center">7</td>
 <td align="center">31 Oct</td>
 <td>
-<strong>Test 1:</strong><br> • Review <strong>L2−L5</strong> material<br>(excluding semiconductors, n/p-doping and transistor structure)<br> • Review 1st and 2nd chapters of Schildt C++ manual<br>
+<strong>Test 1:</strong><br> • Review <strong>L2−L5</strong> material<br>(excluding semiconductors, n/p-doping and transistor structure)<br> • Review <strong>1st</strong> and <strong>2nd</strong> chapters of Schildt C++ manual<br>
 </td>
 <td></td>
 </tr>
@@ -162,7 +162,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td align="center">14</td>
 <td align="center">19 Dec</td>
 <td>
-<strong>Test 2</strong><br>• Review L6−L11 material<br>• Review 3rd — 6th chapters of Schildt C++ manual</td>
+<strong>Test 2</strong><br>• Review <strong>L6−L11</strong> material<br>• Review chapters <strong>3-6</strong> of Schildt C++ manual</td>
 <td></td>
 </tr>
 <tr>
