Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td align="center">12</td>
 <td align="center">05 Dec</td>
 <td>
-<strong>L10: Advanced Pipelining and Superscalar CPUs</strong><br>
+<strong>L10: Advanced Pipelining</strong><br>Exceptions<br>Complex Pipeline<br>Superscalar CPUs<br>
 </td>
 <td>Publishment of the 3rd assignment</td>
 </tr>
@@ -188,7 +188,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <h2>
 <a id="about-us" class="anchor" href="#about-us" aria-hidden="true"><span class="octicon octicon-link"></span></a>About us</h2>
 
-<p>The project has been started in 2009 year as part of Intel lab's acivity in MIPT. Since 2015, it is mentored by <a href="https://github.com/pavelkryukov">Pavel Kryukov</a> and <a href="https://github.com/igorsmir-ilab">Igor Smirnov</a>. For more information, check <a href="https://github.com/MIPT-ILab/mipt-mips/wiki/AboutUs">this wiki page</a> and <a href="http://ilab.fizteh.ru">Intel lab's site</a></p>
+<p>The project has been started in 2009 year as part of Intel lab's acivity in MIPT. Since 2015, it is mentored by <a href="https://github.com/pavelkryukov">Pavel Kryukov</a> and <a href="https://github.com/igorsmir-ilab">Igor Smirnov</a> under <a href="https://github.com/alexander-titov">Alexander Titov's</a> supervising. For more information, check <a href="https://github.com/MIPT-ILab/mipt-mips/wiki/AboutUs">this wiki page</a> and <a href="http://ilab.fizteh.ru">Intel lab's site</a></p>
       </section>
     </div>
 
