--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td align="center">12</td>
 <td align="center">05 Dec</td>
 <td>
-<strong>L10: Advanced Pipelining</strong><br>Exceptions<br>Complex Pipeline<br>Superscalar CPUs<br>
+<strong>L10: Advanced Pipelining</strong><br>— <em>Exceptions</em><br>— <em>Complex Pipeline</em><br>— <em>Superscalar CPUs</em><br>• <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_10__05_Dec__Advanced_Pipelining__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 0.4 MB</a>
 </td>
 <td>Publishment of the 3rd assignment</td>
 </tr>
