Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td align="center">13</td>
 <td align="center">12 Dec</td>
 <td>
-<strong>L11: Pipeline Staging</strong><br>
+<strong>L11: Pipeline Performance and Power</strong><br>
 </td>
 <td></td>
 </tr>
