Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td>
 <strong>L10: Advanced Pipelining</strong><br>— <em>Exceptions</em><br>— <em>Complex Pipeline</em><br>— <em>Superscalar CPUs</em><br>• <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_10__05_Dec__Advanced_Pipelining__Eng_text__Rus_audio.pptx?raw=true">Eng text, Rus audio, 79 MB</a><br>• <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_10__05_Dec__Advanced_Pipelining__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 0.4 MB</a>
 </td>
-<td>Publishment of the 3rd assignment</td>
+<td></td>
 </tr>
 <tr>
 <td align="center">13</td>
 <td align="center">12 Dec</td>
 <td>
-<strong>L11: Performance and Power</strong><br>
+<strong>L11: Performance and Power</strong><br>• <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_11__12_Dec__Performance_and_Power__Eng_text__Rus_audio.pptx?raw=true">Eng text, Rus audio, 67 MB</a><br>• <a href="https://github.com/MIPT-ILab/mipt-mips/blob/master/2015/Lecture_11__12_Dec__Performance_and_Power__Eng_text__No_audio.pptx?raw=true">Eng text, No audio, 1.0 MB</a>
 </td>
 <td></td>
 </tr>
@@ -162,14 +162,14 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td align="center">14</td>
 <td align="center">19 Dec</td>
 <td>
-<strong>Test 2</strong><br>• Review <strong>L6−L11</strong> material<br>• Review chapters <strong>3-6</strong> of Schildt C++ manual</td>
+<strong>Test 2</strong><br>• Review <strong>L6−L11</strong> material (excluding complex pipelines and performance/power formulas)<br>• Review chapters <strong>3-6</strong> of Schildt C++ manual</td>
 <td></td>
 </tr>
 <tr>
 <td align="center">15<br>—<br>20</td>
 <td align="center"></td>
 <td><strong>Christmas holidays</strong></td>
-<td>08 Jan is the deadline for the 3rd assignment</td>
+<td>?? Jan is the deadline for the 3rd assignment</td>
 </tr>
 </tbody>
 </table>
