Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -166,10 +166,16 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td></td>
 </tr>
 <tr>
-<td align="center">15<br>—<br>20</td>
+<td align="center">15<br>—<br>21</td>
 <td align="center"></td>
 <td><strong>Christmas holidays</strong></td>
 <td>?? Jan is the deadline for the 3rd assignment</td>
+</tr>
+<tr>
+<td align="center">22</td>
+<td align="center">06 Feb</td>
+<td><strong>L12: Caches, part 1</strong></td>
+<td></td>
 </tr>
 </tbody>
 </table>
