Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -163,13 +163,14 @@ Project participants attend these events at 18:40, room 123 of MIPT Main Buildin
 <td align="center">19 Dec</td>
 <td>
 <strong>Test 2</strong><br>• Review <strong>L6−L11</strong> material (excluding complex pipelines and performance/power formulas)<br>• Review chapters <strong>3-6</strong> of Schildt C++ manual</td>
-<td></td>
+<td>Start <a href="https://github.com/MIPT-ILab/mipt-mips-2015/wiki/Assignment-3">3rd assignment</a>
+</td>
 </tr>
 <tr>
 <td align="center">15<br>—<br>21</td>
 <td align="center"></td>
 <td><strong>Christmas holidays</strong></td>
-<td>?? Jan is the deadline for the 3rd assignment</td>
+<td>29 Jan is the deadline for the 3rd assignment</td>
 </tr>
 <tr>
 <td align="center">22</td>
